--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://www.kineticallyconstrained.com
+baseURL: https://blog.dougashton.net
 title: Kinetically Constrained
 theme: hugo-theme-fuji
 hasCJKLanguage: yes
