redirect dougashton to dougmet netlify.toml
redirect dougashton to dougmet

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,3 +12,9 @@ command = "hugo -F -b $DEPLOY_PRIME_URL"
 [context.production]
 [context.production.environment]
 HUGO_ENV = "production"
+
+[[redirects]]
+  from = "/*"
+  to = "https://blog.dougmet.net/:splat"
+  status = 301
+  force = true
